Set Runtime version on integration test tasks
Propagate the runtime settings to the underlying projects
Set the source and target compatibility levels for Itest code